--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     --clr-text-dark: #262626;
     --clr-text-light: #545454;
 }
+
 *,
 *::before,
 *::after {
@@ -12,202 +13,224 @@
     padding: 0;
     box-sizing: border-box;
 }
-*{ box-sizing: border-box; }
 
-		body{
-            margin:0;
-            background-color:  var(--clr-bg);
-			font-family: "Poppins",sans-serif;
-            font-weight: 300;
+* {
+    box-sizing: border-box;
+}
 
-            font-size: 16px;
-            background-color: var(--clr-bg);
-            height: 100vh;
-            overflow: hidden;
-            background-position: center center;
-            background-size: 1350px 800px;
-            
-            line-height: 1.5;
+body {
+    margin: 0;
+    background-color: var(--clr-bg);
+    font-family: "Poppins", sans-serif;
+    font-weight: 300;
 
-        }
-        .container-main{
-            height: 100vh;
-            overflow: auto;  
-            scroll-snap-type: y mandatory;    
-        }
+    font-size: 16px;
+    background-color: var(--clr-bg);
+    height: 100vh;
+    overflow: hidden;
+    background-position: center center;
+    background-size: 1350px 800px;
+    line-height: 1.5;
 
-        .snap-section-1 {
-            scroll-snap-align: start;
-            min-height: 50vh;
-          }
-          
-          .snap-section-2{
-            scroll-snap-align: start;
-            min-height: 100vh;
-          }
-            /*
+}
+
+.container-main {
+    height: 100vh;
+    overflow: auto;
+    scroll-snap-type: y mandatory;
+    width: 100%;
+}
+
+.snap-section-1 {
+    scroll-snap-align: start;
+    min-height: 50vh;
+}
+
+.snap-section-2 {
+    scroll-snap-align: start;
+    min-height: 100vh;
+}
+
+/*
         img {
             max-width: 5%;
             min-height: 1px;
             height: auto;
         }
         */
-		.header {
-			overflow: hidden;
-			background-color: rgb(255, 115, 0);
-			padding: 20px 50px;
-		}
+.header {
+    overflow: hidden;
+    background-color: rgb(255, 115, 0);
+    padding: 20px 50px;
+}
 
-		.header a{
-			float:left;
-			color: black;
-			text-align: center;
-			padding: 12px;
-			text-decoration: none;
-			/*font-size: 18px;*/
-			line-height: -1px;
-			border-radius: 4px;
-            
-		}
-		.header a:hover
-        {
-			background-color: #dddddd00;
-			color:rgb(255, 255, 255);
-		}
-		.header a.activo{
-			background-color: rgb(207, 158, 68);
-			color:white;
-		}
-        
-        #logo{
-            background-color: #00000000;
-            color: #000000;
-            font-family:Arial, Helvetica, sans-serif;
-            font-size: 19px;
-            font-weight: bold; 
-            border: 2px solid;
-            text-align:right
-            
-	        
-            
-        }
-            
-        #btn{
-            background-color: #006bc8;
-            color: #fff;
-            transition: all .3s cubic-bezier(.19,1,.22,1);
-            cursor: pointer;
-            text-shadow: none;
-            font-size: 1rem;
-            text-align: center;
-            padding: 12px 25px;
-            transition: all ease-in-out .15s;
-            display: inline-block;
-            line-height: 1.1;
-            border-radius: 100px;
-            border: 2px solid transparent;
-            font-weight: 500;
-            letter-spacing: -.18px;
-        }
+.header a {
+    float: left;
+    color: black;
+    text-align: center;
+    padding: 12px;
+    text-decoration: none;
+    /*font-size: 18px;*/
+    line-height: -1px;
+    border-radius: 4px;
 
-        #navbar-header{
-            float: right; /*lo mueve a la posicion de la derecha*/
-        }
-        
-        /*responsivo*/
-		@media screen and (max-width: 600px){
-			.header a{
-				float:none;
-				display:block;
-				text-align: left;
-			}
-			#navbar-header{
-				float: none;
-			}
-            .container-main img{
-                display: none;
-            }
-		}
-      
-        img { /*tamaña de las img*/
-            width: 100%;
-            height: 100%;
-        }
-        
-        #instagram{
-            width: 5%;
-            height: 10%;
-        }
+}
 
-        .main{
-            display:flex; /*grid;separa lo mismo que el grid-template-columns*/
-            height: 85vh;
-            width: 100%;
-        }
+.header a:hover {
+    background-color: #dddddd00;
+    color: rgb(255, 255, 255);
+}
 
-        .img-1{
-            background-repeat: no-repeat;/*para que no se repita la img*/
-            background-size: cover;
-            background-position: center;
-            position: absolute;
-            top: -106px;
-            left: 1000px;
-            transform: translateX(-50%);
-            width: 37%;
-            height: 134%;
-            z-index: -1;
-            
-        }
-        .img-1 img {
-            object-fit: cover;
-            border-bottom-left-radius: 1000px;
-            border-bottom-right-radius: 1000px;
-        }
-        .main-text{
-            position: relative;
-            left: 150px;/* va moviendo entre los lados*/
-            font-size: 45px;/*tamaño del texto*/
-            font-weight: 900;/*espacio entre reglon*/
-            font-family: "Clash Display",sans-serif;/*tipo de letra*/
-            line-height: 1.15;/*espacio entre reglon 2*/
-            color: var(--clr-text-dark);/*color de la letra*/
-            margin-bottom: 10px;/*espacio entre el texto grande con el chico*/
-            border:1px solid;
-            border-top: 0px;/*desaparece border superior*/
-            border-width: 6px;
-            /*top: 6px; /*se mueve entre arriba y abajo*/
-            display: inline-table;
-            border-right: 0px;/*desaparece border izquierdo*/
-            padding: 50px;
-        }
-        
-        .main-text span {
-            color: var(--clr-primary);/*color para la etiqueta span*/
-        }
+.header a.activo {
+    background-color: rgb(207, 158, 68);
+    color: white;
+}
 
-        .sub-text {
-            position: relative;
-            left: 150px;
-            font-weight: 500;
-            width: 50ch; /*acomoda los reglones*/
-            color: var(--clr-text-light);
-            margin-bottom: 40px;
-        }
+#logo {
+    background-color: #00000000;
+    color: #000000;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 19px;
+    font-weight: bold;
+    border: 2px solid;
+    text-align: right
+}
 
-        .text-box {
-            align-self: center;
-            height: 60%;
-        }
+#btn {
+    background-color: #006bc8;
+    color: #fff;
+    transition: all .3s cubic-bezier(.19, 1, .22, 1);
+    cursor: pointer;
+    text-shadow: none;
+    font-size: 1rem;
+    text-align: center;
+    padding: 12px 25px;
+    transition: all ease-in-out .15s;
+    display: inline-block;
+    line-height: 1.1;
+    border-radius: 100px;
+    border: 2px solid transparent;
+    font-weight: 500;
+    letter-spacing: -.18px;
+}
 
-        .website-title{
-            height: 134%;
-            /*background-color: #049c7b;*/
-            margin-right: auto;
-            margin-left: auto;
-            padding-right: 0px;
-            padding-top: 0px;
-        }
+#navbar-header {
+    float: right;
+    /*lo mueve a la posicion de la derecha*/
+}
 
-        .img-code{
-            top: 50px;
-        }
+/*responsivo*/
+@media screen and (max-width: 600px) {
+    .header a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+
+    #navbar-header {
+        float: none;
+    }
+
+    .container-main img {
+        display: none;
+    }
+}
+
+img {
+    /*tamaña de las img*/
+    width: 100%;
+    height: 100%;
+}
+
+#instagram {
+    width: 5%;
+    height: 10%;
+}
+
+.main {
+    display: flex;
+    /*grid;separa lo mismo que el grid-template-columns*/
+    height: 85vh;
+    width: 100%;
+}
+
+.img-1 {
+    background-repeat: no-repeat;
+    /*para que no se repita la img*/
+    background-size: cover;
+    background-position: center;
+    position: absolute;
+    top: -106px;
+    left: 1000px;
+    transform: translateX(-50%);
+    width: 37%;
+    height: 134%;
+    z-index: -1;
+
+}
+
+.img-1 img {
+    object-fit: cover;
+    border-bottom-left-radius: 1000px;
+    border-bottom-right-radius: 1000px;
+}
+
+.main-text {
+    position: relative;
+    left: 150px;
+    /* va moviendo entre los lados*/
+    font-size: 45px;
+    /*tamaño del texto*/
+    font-weight: 900;
+    /*espacio entre reglon*/
+    font-family: "Clash Display", sans-serif;
+    /*tipo de letra*/
+    line-height: 1.15;
+    /*espacio entre reglon 2*/
+    color: var(--clr-text-dark);
+    /*color de la letra*/
+    margin-bottom: 10px;
+    /*espacio entre el texto grande con el chico*/
+    border: 1px solid;
+    border-top: 0px;
+    /*desaparece border superior*/
+    border-width: 6px;
+    /*top: 6px; /*se mueve entre arriba y abajo*/
+    display: inline-table;
+    border-right: 0px;
+    /*desaparece border izquierdo*/
+    padding: 50px;
+}
+
+.main-text span {
+    color: var(--clr-primary);
+    /*color para la etiqueta span*/
+}
+
+.sub-text {
+    position: relative;
+    left: 150px;
+    font-weight: 500;
+    width: 50ch;
+    /*acomoda los reglones*/
+    color: var(--clr-text-light);
+    margin-bottom: 40px;
+}
+
+.text-box {
+    align-self: center;
+    height: 60%;
+}
+
+.website-title {
+    height: 134%;
+    /*background-color: #049c7b;*/
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 0px;
+    padding-top: 0px;
+}
+
+.img-code {
+    top: 50px;
+}
