--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
     --clr-primary: #e78c2f;
     --clr-secondary: #049c7b;
-    --clr-bg: #f3f3ed;
+    --clr-bg: #000000;
     --clr-text-dark: #262626;
     --clr-text-light: #545454;
 }
