--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 :root {
-    --clr-primary: #ffffff
-        /*#e78c2f;*/
-        --clr-secondary: #049c7b;
+    --clr-primary: #e78c2f;
+    --clr-secondary: #049c7b;
     --clr-bg: #ffffff;
     --clr-text-dark: #262626;
     --clr-text-light: #545454;
