--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ body {
     background-color: var(--clr-bg);
     font-family: "Poppins", sans-serif;
     font-weight: 300;
-
     font-size: 16px;
     background-color: var(--clr-bg);
     height: 100vh;
@@ -38,7 +37,7 @@ body {
     height: 100vh;
     overflow: auto;
     scroll-snap-type: y mandatory;
-    width: 100%;
+    width: 100% !important;
 }
 
 .snap-section-1 {
