--- a/styles.css
+++ b/styles.css
@@ -42,18 +42,26 @@
     text-align: center;
 }
 
+
 #Login {
     position: relative;
-    height: 100%;
-    overflow: hidden;
-    left: 686px;
 }
 
-.dropdown-menu[data-bs-popper] {
-    left: -170px;
+#menu_login {
+    position: absolute;
+    display: none;
+    background-color: #fff;
+    min-width: 100px;
+    max-width: 200px;
+    padding: 10px;
+    z-index: 1000;
 }
 
-/*
-#login {
-    left: 686px;
-}*/
+#menu_login div {
+    color: #000;
+    text-decoration: none;
+}
+
+#Login:hover #menu_login {
+    display: block;
+}
