--- a/styles.scss
+++ b/styles.scss
@@ -16,7 +16,7 @@ $theme-colors: (
     "warning": $warning,
     "danger": $danger,
     "light": $light,
-    "dark": $dark
+    "dark": $dark,
 );
 
 
