--- a/styles.css
+++ b/styles.css
@@ -297,13 +297,14 @@ nav {
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
+    letter-spacing: 2px !important;
 }
 
 
 #span-1 h2 {
     font-weight: 700;
     line-height: 74px;
-    font-size: 3vw;
+    font-size: 4vw;
     letter-spacing: normal;
     text-transform: uppercase;
 }
