--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,8 @@ nav {
 /*Cambiamos el espacio que hay entre los menus del navbar*/
 .navbar {
     --bs-navbar-nav-link-padding-x: 1rem;
-    background-color: #331db9
+    background-color: #438eff
+        /* #331db9*/
         /*var(--clr-background-navbar);*/
 }
 
