--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /*Variables globales*/
 :root {
-    --clr-primary: #e78c2f;
+    --clr-primary: #4807a8;
     --clr-secondary: #049c7b;
     --clr-bg: #ffffff;
     --clr-text-dark: #262626;
@@ -24,7 +24,8 @@ body {
     font-family: 'Open Sans', sans-serif;
     -webkit-font-smoothing: antialiased;
     color: #626262;
-    line-height: 22px;
+    line-height: 35px;
+    background-color: #7273cf;
 }
 
 img,
@@ -42,10 +43,8 @@ nav {
 /*Cambiamos el espacio que hay entre los menus del navbar*/
 .navbar {
     --bs-navbar-nav-link-padding-x: 1rem;
-    background-color: #4807a8
-        /* #438eff;*/
-        /* #331db9*/
-        /*var(--clr-background-navbar);*/
+    --bs-navbar-padding-y: 0rem;
+    background-color: var(--clr-primary);
 }
 
 /*Sacamos el border que le da al presionar el icono de menu del resposivo*/
@@ -75,8 +74,8 @@ nav {
 }
 
 .snap-section-1 {
-    background-image: url('img/fondo_blue.jpg');
-    color: #f5f5f5;
+    /*background-image: url('img/fondo_blue.jpg');
+    color: #f5f5f5;*/
     width: 100%;
     height: inherit;
     background-repeat: no-repeat;
@@ -84,6 +83,7 @@ nav {
     /*background-size: contain;*/
     background-size: 100% 100%;
     min-height: 50vh;
+    background: linear-gradient(60deg, rgba(84, 58, 183, 1) 0%, rgba(0, 172, 193, 1) 100%);
 }
 
 .content {
@@ -490,10 +490,6 @@ h5,
     text-transform: uppercase;
 }*/
 
-
-
-
-
 .raise:hover,
 .raise:focus {
     box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
@@ -518,6 +514,7 @@ button:hover,
 button:focus {
     border-color: var(--hover);
     color: #4807a8;
+
 }
 
 button {
@@ -525,6 +522,6 @@ button {
     border: 2px solid;
     font: inherit;
     line-height: 1;
-    margin: 0.5em;
+    margin: 2.5em;
     padding: 1em 2em;
 }
