--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,9 @@ nav {
     font-size: 14px;
 }
 
-.nav-item:hover {
+
+
+.nav-selection:hover {
     background-color: rgba(255, 255, 255, 0.226);
 }
 
